# PotatoBrowser

./: .gitmodules  README.md
cef-rs/: .gitignore  Cargo.toml  README.md
cef-rs/.github/workflows/: rust.yml  update-bindings.yml
cef-rs/cef/: Cargo.toml
cef-rs/cef/examples/: bundle_cefsimple.rs
cef-rs/cef/examples/cefsimple/: main.rs
cef-rs/cef/src/: args.rs  lib.rs  library_loader.rs  sandbox_info.rs  string.rs
cef-rs/cef/src/bindings/: aarch64_apple_darwin.rs  aarch64_unknown_linux_gnu.rs  i686_pc_windows_msvc.rs  x86_64_pc_windows_msvc.rs
cef-rs/download-cef/: Cargo.toml
cef-rs/download-cef/src/: lib.rs
cef-rs/export-cef-dir/: Cargo.toml
cef-rs/export-cef-dir/src/: main.rs
cef-rs/potato-browser/: .gitignore  Cargo.toml  README.md  build.rs  run.sh
cef-rs/potato-browser/src/: main.rs
cef-rs/sys/: Cargo.toml  build.rs  wrapper.h
cef-rs/sys/src/: lib.rs
cef-rs/sys/src/bindings/: aarch64_apple_darwin.rs  aarch64_unknown_linux_gnu.rs  arm_unknown_linux_gnueabi.rs  i686_pc_windows_msvc.rs  x86_64_pc_windows_msvc.rs  x86_64_unknown_linux_gnu.rs
cef-rs/update-bindings/: Cargo.toml  README.md
cef-rs/update-bindings/src/: main.rs  parse_tree.rs  upgrade.rs
