[workspace]
resolver = "2"

members = ["download-cef", "update-bindings", "export-cef-dir", "sys", "cef", "potato-browser"]

[workspace.package]
version = "135.0.22"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Wu Yu Wei <yuweiwu@pm.me>",
    "Bill Avery <wravery@gmail.com>",
    "csmoe <csmoe@msn.com>",
]
repository = "https://github.com/tauri-apps/cef-rs"

[workspace.dependencies]
cef = { version = "135.0.22", path = "cef" }  
cef-dll-sys = { version = "135.0.22", path = "sys" }
download-cef = { version = "1.3", path = "download-cef" }

anyhow = "1"
bindgen = "0.71"
clap = { version = "4", features = ["derive"] }
cmake = "0.1"
convert_case = "0.8"
plist = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"

[workspace.dependencies.windows-sys]
version = "0.59"
features = ["Win32_System_Environment", "Win32_System_LibraryLoader"]
